--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,17 @@
     box-sizing: border-box
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: sans-serif;
+}
+
+.wrapper {
+    margin: 0 auto;
+    max-width: 1020px
 }
 
 .header {
@@ -17,9 +26,140 @@ body {
 }
 
 .header__title {
-    padding: 30px;
+    margin-top: 30px;
+    font-size: 56px;
 }
 
 .header__subtitle {
     padding: 10px;
 }
+
+.button {
+    display: block;
+    width: 120px;
+    background: #e94369;
+    padding: 10px;
+    border-radius: 50px;
+    margin: 20px auto;
+    color: #fff;
+    box-shadow: #000 1px 1px 8px 0;
+    text-decoration: none
+
+}
+
+.info {
+    padding: 15px;    
+    background-color: #fbd364;
+}
+
+.section {
+    padding: 15px;
+}
+
+.section__title {
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    font-size: 40px;
+}
+
+.info__title {
+    color: #fff;
+}
+
+.section__text {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    color: #333
+}
+
+.info__wrapper {
+    background-color: #eff6ee;
+    padding: 25px;
+    border-radius: 20px;
+}
+
+.lists {
+    background: #eff6ee;
+}
+
+.lists__title {
+    color: #333
+}
+
+.lists__wrapper {
+    display: flex;
+} 
+
+.list__item {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    margin-top: 20px;
+}
+
+.list__item::before {
+    margin-right: 10px;
+    content: "";
+    display: block;
+    width: 25px;
+    height: 25px;
+    background-image: url(../images/check-mark.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.important-text {
+    position: relative;
+    color: #e94369;
+    font-weight: bold;
+    width: 100%;
+    height: 350px;
+    background-image: url('../images/bubble-chat.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.important-text p {
+    text-align: center;
+    position: absolute;
+    line-height: 1.5;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px
+}
+
+.reviews {
+    background-color: #eff6ee;
+}
+
+.reviews-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.review {
+    color: #fff;    
+    list-style: none;
+    flex-basis: 23%;
+    background-color: #fbd364;
+    padding: 15px;
+    border-radius: 20px;
+    margin: 10px auto;
+}
+
+.review__text {
+    min-width: 250px;
+    font-size: 14px;
+}
+
+.review__author {
+    font-size: 18px;
+    font-weight: bold;
+    font-style: italic;
+    margin: 20px 0;
+}
+
