--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,10 @@ body {
 .header {
     background-image: url('../images/bg-header.jpg');
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
-    color: #fff
+    color: #fff;
+    padding-bottom: 30px;
 }
 
 .header__title {
@@ -32,6 +33,21 @@ body {
 .header__subtitle {
     padding: 10px;
 }
+
+.frame {
+    overflow:hidden;
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0;
+  }
+  .frame iframe {
+    position:absolute;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
+  }
 
 .button {
     display: block;
@@ -196,6 +212,10 @@ body {
 }
 
 @media screen and (max-width: 750px) {
+    .header__title {
+        font-size: 40px;
+    }
+
     .lists__wrapper {
         flex-direction: column;
         margin-left: 10%;   
@@ -206,6 +226,10 @@ body {
 
     .important-text p {
         font-size: 16px;
+    }
+    .info__title {
+        text-align: left;
+        font-size: 36px;
     }
 }
 
