--- a/css/styles.css
+++ b/css/styles.css
@@ -20,13 +20,14 @@ body {
 .header {
     background-image: url('../images/bg-header.jpg');
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
     color: #fff;
+    padding-bottom: 30px;
 }
 
 .header__title {
-    font-size: 56px;
+    font-size: 5vw;
 }
 
 .header__subtitle {
@@ -74,7 +75,7 @@ body {
     text-align: center;
     padding: 10px;
     margin: 10px;
-    font-size: 40px;
+    font-size: 4vw;
 }
 
 .info__title {
@@ -211,10 +212,6 @@ body {
 }
 
 @media screen and (max-width: 750px) {
-    .header__title {
-        font-size: 40px;
-    }
-
     .lists__wrapper {
         flex-direction: column;
         margin-left: 10%;   
@@ -225,10 +222,6 @@ body {
 
     .important-text p {
         font-size: 16px;
-    }
-    .info__title {
-        text-align: left;
-        font-size: 36px;
     }
 }
 
@@ -246,12 +239,21 @@ body {
     .author__image {
         width: 100%;
     }
+
+    .header__title,
+    .section__title {
+        font-size: 30px;
+    }
 }
 
 @media screen and (max-width: 440px) {
-    .header__title {
-        font-size: 36px;
+    .header__title,
+    .section__title,
+    .header__subtitle {
+        font-size: 20px;
     }
 }
+
+
 
 
