--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
     min-height: 100vh;
     text-align: center;
     color: #fff;
-    padding-bottom: 30px;
+    padding: 30px;
 }
 
 .header__title {
